--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 
 # Backend
 backend/venv/
-backend/__pycache__/
+backend/**/__pycache__/
 backend/*.pyc
 backend/.pytest_cache/
 backend/.mypy_cache/
@@ -15,6 +15,10 @@ backend/.coverage
 backend/htmlcov/
 backend/.vscode/
 backend/.idea/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
 
 # Frontend
 frontend/node_modules/
