--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,11 +13,14 @@ SUPABASE_SERVICE_KEY=eyJxxx...
 
 # OpenAI / LLM
 OPENAI_API_KEY=sk-...
-OPENAI_MODEL=gpt-4
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
 ANTHROPIC_API_KEY=sk-ant-...
 
-# Gmail API
-GMAIL_CREDENTIALS_JSON={"type":"service_account",...}
+# Google OAuth (for Gmail + Calendar)
+GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:8000/api/v1/auth/google/callback
 
 # Security
 SECRET_KEY=your-secret-key-here-change-in-production
