--- a/backend/.env.example
+++ b/backend/.env.example
@@ -25,5 +25,5 @@ GOOGLE_REDIRECT_URI=http://localhost:8000/api/v1/auth/google/callback
 # Security
 SECRET_KEY=your-secret-key-here-change-in-production
 
-# CORS
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
+# CORS (include both app and landing page URLs)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:8000
