feat: complete Linear integration with automated sync
✅ Linear Integration (Phase 1B)
- Implement LinearService with GraphQL API integration
- Add OAuth flow for Linear (client ID, secret, callback)
- Sync issues assigned to user (with full metadata)
- Sync projects (all states: planned, started, completed, canceled)
- Create database tables: linear_issues, linear_projects
- Add RLS policies for data security
- Implement timestamp normalization for Linear's non-standard ISO format

✅ API Routes
- GET /api/v1/linear/oauth/url - Generate Linear OAuth URL
- GET /api/v1/linear/oauth/callback - Handle OAuth callback
- POST /api/v1/linear/sync - Manually trigger sync
- GET /api/v1/linear/issues - Get synced issues
- GET /api/v1/linear/projects - Get synced projects
- GET /api/v1/linear/status - Get integration status

✅ Scheduler Integration
- Add Linear sync to 30-minute automated loop
- Integrate with existing Gmail + Calendar sync
- Update scheduler job name to reflect all integrations

✅ Database Migration
- Create 001_create_linear_tables.sql migration
- Add linear_issues table (17 fields)
- Add linear_projects table (15 fields)
- Implement RLS policies with proper syntax

✅ Testing & Validation
- Tested OAuth flow end-to-end
- Verified issue and project syncing
- Confirmed automated sync loop working
- Validated data persistence in Supabase

📊 Updated Documentation
- Update PROGRESS.md with Linear completion
- Update PRODUCT_ROADMAP.md with Phase 1B progress
- Mark Linear integration as completed (Oct 29, 2025)
- Update metrics: 6 services, 10 tables, 26 API endpoints

🧹 Cleanup
- Remove temporary test files (test_scheduler.py, test_scheduler_live.py)
- Remove pip install artifacts (=2.31.0, =3.10.4)
- Remove temporary documentation (TESTING_SCHEDULER.md, DOCUMENTATION_INDEX.md)
- Clean up __pycache__ directories

Phase 1B Progress: Gmail ✅ Calendar ✅ Linear ✅ | Next: Stripe integration

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,6 +23,10 @@ google-auth>=2.25.2
 # HTTP clients
 httpx>=0.25.2
 aiohttp>=3.9.1
+requests>=2.31.0
+
+# Background jobs & scheduling
+apscheduler>=3.10.4
 
 # Security
 python-jose[cryptography]>=3.3.0
