--- a/app/package.json
+++ b/app/package.json
@@ -11,16 +11,17 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.0",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.553.0",
     "next": "14.0.0",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.3.0",
-    "@supabase/supabase-js": "^2.38.0",
     "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16",
-    "clsx": "^2.0.0",
-    "axios": "^1.6.0"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
