Add Context Layer: AI SDK chat, Slack/Notion integrations, knowledge page

--- a/app/.env.example
+++ b/app/.env.example
@@ -8,3 +8,9 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJxxx...
 # URLs (for cross-linking between landing and app)
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_LANDING_URL=http://localhost:3001
+
+# OpenAI (for AI SDK - server-side only)
+OPENAI_API_KEY=sk-...
+
+# Supabase Service Role Key (for AI SDK chat route - server-side only)
+SUPABASE_SERVICE_ROLE_KEY=eyJxxx...
