--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,3 +27,13 @@ SECRET_KEY=your-secret-key-here-change-in-production
 
 # CORS (include both app and landing page URLs)
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://localhost:8000
+
+# Slack Integration
+SLACK_CLIENT_ID=your-slack-client-id
+SLACK_CLIENT_SECRET=your-slack-client-secret
+SLACK_REDIRECT_URI=http://localhost:8000/api/v1/slack/oauth/callback
+
+# Notion Integration
+NOTION_CLIENT_ID=your-notion-client-id
+NOTION_CLIENT_SECRET=your-notion-client-secret
+NOTION_REDIRECT_URI=http://localhost:8000/api/v1/notion/oauth/callback
